Name:                HSLoggerColorHandler
Version:             0.1
Synopsis:            LogHandler for hslogger that enables colored output to terminal
Homepage:            https://github.com/thlorenz/HSLoggerColorHandler
License:             BSD3
License-file:        LICENSE
Author:              Thorsten Lorenz
Maintainer:          thlorenz@gmx.de
Category:            Development

Build-type:          Simple
Cabal-version:       >=1.2


Library
  Exposed-modules:     System.Log.Handler.Color
  
  Build-depends:      base 
                    , ansi-terminal   >=0.5.5     &&  <0.6
                    , hslogger        >=1.1.4     &&  <1.2    
  
  Other-modules:     Example
  
